[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.6.0"
aiogram = {extras = ["fast"], version = "^3.15.0"}
python-dotenv = "^1.0.1"
aiohttp = "3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
